debut : barre de nav

--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
-Hello World
+<!doctype html>
+<html lang="fr">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Tuto Programmation">
+    <meta name="author" content="Bastien Picco">
+    <title>MonSite</title>
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/navbars/">
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <!-- Icone -->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon2.ico" />
+
+    <!-- Style -->
+    <style>
+
+    </style>
+
+    
+    <!-- Custom styles for this template -->
+    <link href="navbar.css" rel="stylesheet">
+</head>
+<body>
+
+<!-- Barre de navigation -->
+<nav class="navbar navbar-expand navbar-dark bg-dark" >
+    <div class="container-fluid">
+        <a class="navbar-brand" href="https://bastienpicco.github.io">Mon menu</a>
+
+        <div class="collapse navbar-collapse" id="monNavbar">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="https://bastienpicco.github.io/">Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Lien</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<main>
+    <div>
+        <div class="bg-light p-5 rounded">
+            <div class="col-sm-8 mx-auto">
+                <h1>Titre</h1>
+                <p>Plein de texte avce du <code>code</code>. Mais aussi des <a href="../examples/navbar-static/">hyperlien</a> </p>
+                <p>2ème paragraphe</p>
+                <p>
+                    <a class="btn btn-primary" href="https://getbootstrap.com/components/navbar/" role="button">Un boutton avec hyperlien &raquo;</a>
+                </p>
+            </div>
+        </div>
+    </div>
+</main>
+
+
+<script src="https://getbootstrap.com/assets/dist/js/bootstrap.bundle.min.js"></script>
+
+      
+</body>
+</html>
