barre de navigation +

--- a/index.html
+++ b/index.html
@@ -41,12 +41,26 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Lien</a>
                 </li>
+                <!-- BASE -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
-                    <ul class="dropdown-menu" aria-labelledby="dropdown03">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Autre action</a></li>
-                        <li><a class="dropdown-item" href="#">Et encore un autre</a></li>
+                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" >Base</a>
+                    <ul class="dropdown-menu" >
+                        <li><a class="dropdown-item" href="./src/base/python.html">Algorithme & Python</a></li>
+                        <li><a class="dropdown-item" href="./src/base/unix.html">Unix de base</a></li>
+                        <li><a class="dropdown-item" href="./src/base/c.html">C</a></li>
+                        <li><a class="dropdown-item" href="./src/base/git.html">Git & utilitaires</a></li>
+                        <li><a class="dropdown-item" href="./src/base/objet.html">Orientée Objet & java</a></li>
+                        <li><a class="dropdown-item" href="./src/base/html.html">HTML & Web</a></li>
+                    </ul>
+                </li>
+                <!-- PLUS AVANCE -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" >Pour aller plus loin</a>
+                    <ul class="dropdown-menu" >
+                        <li><a class="dropdown-item" href="./src/plus_avance/thread.html">Thread & Process</a></li>
+                        <li><a class="dropdown-item" href="./src/plus_avance/semaphore.html">Semaphore</a></li>
+                        <li><a class="dropdown-item">AUTRE</a></li>
+                        <li><a class="dropdown-item" href="./src/plus_avance/unity.html">Unity</a></li>
                     </ul>
                 </li>
             </ul>
@@ -55,8 +69,8 @@
 </nav>
 
 <main>
-    <div>
-        <div class="bg-light p-5 rounded">
+    <div class="container">
+        <div class="bg-light p-5 rounded row">
             <div class="col-sm-8 mx-auto">
                 <h1>Titre</h1>
                 <p>Plein de texte avce du <code>code</code>. Mais aussi des <a href="#">hyperlien</a> </p>
@@ -67,6 +81,28 @@
             </div>
         </div>
     </div>
+
+    <br/> <br/> <br/>
+    <ul>
+    <li>python et algo</li>
+    <li>unix de base</li>
+    <li>c</li>
+    <li>git et utilitaire(vs)</li>
+    <li>java + objet</li>
+    <br/>
+    <li>html</li>
+    <br/>
+    <li>Pour Continuer</li>
+    <li>thread/process</li>
+    <li>Semaphore</li>
+    <li>GPU</li>
+    <br/>
+    <li>unity</li>
+    <br/>
+    <li>Dictionnaire Simplifié(vocab)</li>
+    </ul>
+    <br/>
+    <xmp><br/></xmp>
 </main>
 
 <script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
