--- a/src/plus_avance/unity.html
+++ b/src/plus_avance/unity.html
@@ -24,7 +24,7 @@
 
     
     <!-- Custom styles for this template -->
-    <link href="navbar.css" rel="stylesheet">
+    <link href="../../assets/navbar.css" rel="stylesheet">
 </head>
 <body>
 
@@ -39,7 +39,7 @@
                     <a class="nav-link" aria-current="page" href="../../index.html">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Lien</a>
+                    <a class="nav-link" href="../dico/index.html">Dictionnaire</a>
                 </li>
                 <!-- BASE -->
                 <li class="nav-item dropdown">
