--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="./index.html">Accueil</a>
                 </li>
+                <!--algorithmie-->
                 <li class="nav-item">
-                    <a class="nav-link" href="./src/dico/index.html">Dictionnaire</a>
+                    <a class="nav-link" href="./src/python/python.html">Algorithmie</a>
                 </li>
                 <!-- BASE -->
                 <li class="nav-item dropdown">
@@ -62,6 +63,10 @@
                         <li><a class="dropdown-item">AUTRE</a></li>
                         <li><a class="dropdown-item" href="./src/plus_avance/unity.html">Unity</a></li>
                     </ul>
+                </li>
+                <!--Dico-->
+                <li class="nav-item">
+                    <a class="nav-link" href="./src/dico/index.html">Dictionnaire</a>
                 </li>
             </ul>
         </div>
@@ -94,23 +99,22 @@
     </div>
 
     <br><br>
-    
+
     <div class="container">
         <div class="bg-light p-5 rounded row">
             <div class="col-sm-8 mx-auto">
-                <h2>Utilisation</h2>
+                <h2>Sommaire</h2>
                 <p>
                     Les menus déroulant de la barre de navigation servent à aller à un certain topic directement.
                     Pour reprendre là où vous en étiez ou suivre votre ordre personnel.
                 </p>
+                <ol>
+                    <li>Algorithmie : apprendre les bases de la programmation</li>
+                    <li>Base : Notions nécessaires en plus de l'algorithmie de base</li>
+                    <li>Pour aller plus loin : Découvertes de notions utiles supplémentaires</li>
+                </ol>
                 <p>
                     Le dictionnaire, tant qu'à lui, définit succinctement les notions abordées qui n'ont pas forcément de pages dédiées.
-                </p>
-                <p>Chaque notion sera découpée en 2 parties :
-                    <ol>
-                        <li>Les notions essentielles</li>
-                        <li>Des compléments utiles mais non primordiaux pour une personne découvrant le concept</li>
-                    </ol>
                 </p>
                 <p>
                     <a class="btn btn-primary" href="./src/base/python.html" role="button">Donc, sans plus attendre, allons y ! &raquo;</a>
