--- a/src/python/python.html
+++ b/src/python/python.html
@@ -39,18 +39,17 @@
                     <a class="nav-link" href="../../index.html">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../dico/index.html">Dictionnaire</a>
+                    <a class="nav-link active" href="./python.html">Algorithmie</a>
                 </li>
                 <!-- BASE -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle active" href="#" data-bs-toggle="dropdown" >Base</a>
+                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" >Base</a>
                     <ul class="dropdown-menu" >
-                        <li><a class="dropdown-item active" href="./python.html">Algorithme & Python</a></li>
-                        <li><a class="dropdown-item" href="./unix.html">Unix de base</a></li>
-                        <li><a class="dropdown-item" href="./c.html">C</a></li>
-                        <li><a class="dropdown-item" href="./git.html">Git & utilitaires</a></li>
-                        <li><a class="dropdown-item" href="./objet.html">Orientée Objet & java</a></li>
-                        <li><a class="dropdown-item" href="./html.html">HTML & Web</a></li>
+                        <li><a class="dropdown-item" href="../base/unix.html">Unix de base</a></li>
+                        <li><a class="dropdown-item" href="../base/c.html">C</a></li>
+                        <li><a class="dropdown-item" href="../base/git.html">Git & utilitaires</a></li>
+                        <li><a class="dropdown-item" href="../base/objet.html">Orientée Objet & java</a></li>
+                        <li><a class="dropdown-item" href="../base/html.html">HTML & Web</a></li>
                     </ul>
                 </li>
                 <!-- PLUS AVANCE -->
@@ -62,6 +61,10 @@
                         <li><a class="dropdown-item">AUTRE</a></li>
                         <li><a class="dropdown-item" href="../plus_avance/unity.html">Unity</a></li>
                     </ul>
+                </li>
+                <!--Dico-->
+                <li class="nav-item">
+                    <a class="nav-link" href="../dico/index.html">Dictionnaire</a>
                 </li>
             </ul>
         </div>
